# viking-ambiata

./: README.md  ambiata-viking.cabal  boris.toml  viking.cabal
src/: Viking.hs
src/Viking/: ByteStream.hs  Char8Stream.hs  Stream.hs
src/Viking/Stream/: Async.hs  Binary.hs
test/: test.hs
test/Test/Viking/: ByteStream.hs  Char8Stream.hs  Stream.hs
test/Test/Viking/Stream/: Binary.hs
