name:                  ambiata-viking
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-viking
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-viking

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-eithert
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , exceptions                      >= 0.6        && < 0.9
                     , lifted-async                    == 0.9.*
                     , mmorph                          == 1.0.*
                     , monad-control                   == 1.0.*
                     , resourcet                       == 1.1.*
                     , streaming                       == 0.1.*
                     , streaming-bytestring            == 0.1.*
                     , text                            >= 1.0        && < 1.3
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Viking

                       Viking.Stream
                       Viking.Stream.Binary

                       Viking.ByteStream
                       Viking.Char8Stream

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-viking
                     , ambiata-x-eithert
                     , binary                          >= 0.7        && < 0.9
                     , bytestring                      == 0.10.*
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        >= 1.3        && < 1.5
                     , hedgehog                        == 0.5.*
                     , resourcet                       == 1.1.*
                     , temporary-resourcet             == 0.1.*
                     , transformers                    >= 0.4        && < 0.6
